objects/Shipped_Line__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Shipment Log</relationshipLabel>
        <relationshipName>Shipment_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Eval_End__c</fullName>
        <label>Eval End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eval_Start__c</fullName>
        <label>Eval Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GMS_Nodes__c</fullName>
        <inlineHelpText>for GMS assets, set the number of nodes licensed for</inlineHelpText>
        <label>GMS Nodes</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <formula>Asset__r.Model__c</formula>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Shipment_Status__c</fullName>
        <inlineHelpText>Status to set asset to after shipment</inlineHelpText>
        <label>Post Shipment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Spare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver Peak Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Return – Eval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Return – Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Write-Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prior_Status__c</fullName>
        <inlineHelpText>Status of existing asset</inlineHelpText>
        <label>Prior Status</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Spare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver Peak Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Return – Eval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Return – Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Write-Off</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <inlineHelpText>Defaults to shipment date, override for RMA adjustments</inlineHelpText>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shipment_Id__c</fullName>
        <label>Shipment Id</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Shipped Lines</relationshipLabel>
        <relationshipName>Shipped_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Warranty_End__c</fullName>
        <label>Warranty End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Start__c</fullName>
        <label>Warranty Start</label>
        <type>Date</type>
    </fields>
    <label>Shipped Line</label>
    <nameField>
        <displayFormat>SLINE-{00000}</displayFormat>
        <label>Ship Line Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipped Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>